<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddToListOfTrash">

    <TextView
        android:id="@+id/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="74dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="74dp"
        android:layout_marginBottom="17dp"
        android:text="@string/dodaj_nowy_rodzaj_miecia"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/add_new_trash_to_list_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/add_new_trash_to_list_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/nazwa"
        app:layout_constraintBottom_toTopOf="@+id/add_new_trash_to_list_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view" />

    <Button
        android:id="@+id/add_new_trash_to_list_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="307dp"
        android:layout_marginBottom="552dp"
        android:text="@string/dodaj"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_new_trash_to_list_input" />

    <Button
        android:id="@+id/anuluj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="195dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="19dp"
        android:text="Anuluj"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/add_new_trash_to_list_button"
        app:layout_constraintTop_toBottomOf="@+id/add_new_trash_to_list_input" />
</androidx.constraintlayout.widget.ConstraintLayout>