<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListOfTrash"
    android:id="@+id/listOfTrash">
    <TextView
        android:id="@+id/textView2"
        android:layout_width="348dp"
        android:layout_height="62dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="7dp"
        android:fontFamily="sans-serif"
        android:text="@string/trash_list"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/add_trash_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/trash_list" />

    <ListView
        android:id="@+id/trash_list"
        android:layout_width="399dp"
        android:layout_height="473dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_trash_button" />

    <Button
        android:id="@+id/add_trash_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="294dp"
        android:onClick="addToListOfTrash"
        android:text="@string/trash_list_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/rem_trash_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="178dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="9dp"
        android:text="@string/trash_list_rem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/add_trash_button"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textAppearance=
            "@style/TextAppearance.MaterialComponents.Subtitle1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="TextView" />

    <Button
        android:id="@+id/loadFromFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="20dp"
        android:text="Wczytaj z pliku"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/trash_list"
        app:layout_constraintEnd_toStartOf="@+id/rem_trash_button"
        app:layout_constraintStart_toEndOf="@+id/add_trash_button"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


</androidx.constraintlayout.widget.ConstraintLayout>